--- a/client/scss/App.scss
+++ b/client/scss/App.scss
@@ -53,7 +53,8 @@ body {
       }
       
       #Header, nav {
-        background: #202633;
+        //background: #202633;
+        background: $color_blue_dark_transparent;
       }
       
       #Header {
