--- a/client/scss/account/Account.css
+++ b/client/scss/account/Account.css
@@ -1,46 +1,133 @@
 /*  Colors  */
-/* line 4, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-#Account section {
-  display: flex;
-  margin: 2em auto;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap; }
-  /* line 12, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-  #Account section form {
-    position: relative;
-    width: 100%;
-    max-width: 20em;
-    margin: 1em 1em;
-    background: rgba(22, 32, 47, 0.61); }
-    /* line 20, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section form .content {
+/* line 3, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+#Account {
+  margin-top: 1em; }
+  /* line 5, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  #Account section {
+    display: flex;
+    margin: 2em auto;
+    justify-content: center;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    /* line 13, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Login, #Account section #Profile, #Account section #CreateAccount {
+      position: relative;
       width: 100%;
-      padding: 1em 2em 2em 2em; }
-      /* line 26, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section form .content input:-webkit-autofill {
-        -webkit-box-shadow: 0 0 0px 1000px #131d2a inset;
-        -webkit-text-fill-color: #ebebeb !important; }
-      /* line 35, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section form .content#Logout {
-        display: block;
-        max-height: 2em;
-        padding: 2em; }
-      /* line 41, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section form .content#ChangePassword {
-        max-width: 30em !important; }
-  /* line 50, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-  #Account section .loaderLinear {
-    position: absolute !important;
-    bottom: 0 !important;
-    max-width: 100% !important;
-    width: 100% !important;
-    opacity: 0.5; }
-  /* line 57, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-  #Account section .loaderBounce {
-    transform: scale(0.6);
-    position: absolute;
-    bottom: 0;
-    right: 0; }
+      max-width: 20em;
+      margin: 1em 1em;
+      background: rgba(22, 32, 47, 0.61); }
+      /* line 21, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Login .content, #Account section #Profile .content, #Account section #CreateAccount .content {
+        width: 100%;
+        padding: 1em 2em 2em 2em; }
+        /* line 27, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Login .content input:-webkit-autofill, #Account section #Profile .content input:-webkit-autofill, #Account section #CreateAccount .content input:-webkit-autofill {
+          -webkit-box-shadow: 0 0 0px 1000px #131d2a inset;
+          -webkit-text-fill-color: #ebebeb !important; }
+    /* line 38, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Login .loaderLinear {
+      position: absolute !important;
+      bottom: 0 !important;
+      max-width: 100% !important;
+      width: 100% !important;
+      opacity: 0.5; }
+    /* line 46, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Login .loaderBounce {
+      transform: scale(0.6);
+      position: absolute;
+      bottom: 0;
+      right: 0; }
+    /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content div.flex p:firs-of-type {
+      margin-top: 10px; }
+    /* line 66, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content div.flex p#textUsername {
+      font-size: 22px;
+      color: #f26e63; }
+    /* line 70, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content div.flex p#textEmail {
+      font-size: 12px;
+      color: #b2b2b2; }
+    /* line 74, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content div.flex p#textEmailStatut {
+      font-size: 10px;
+      color: #466da0; }
+    /* line 81, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content #ChangeAvatar {
+      margin-right: 1em; }
+      /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #ChangeAvatar .currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview {
+        transition: all 0.5s;
+        display: inline-block; }
+        /* line 88, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangeAvatar .currentAvatar img, #Account section #Profile div.content #ChangeAvatar .avatarPreview img {
+          height: 60px;
+          width: 60px;
+          border-radius: 100%; }
+        /* line 94, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar {
+          position: relative;
+          left: 0;
+          opacity: 1;
+          width: 4.5em; }
+          /* line 102, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar.is-visible {
+            opacity: 0.3;
+            left: 0px; }
+          /* line 108, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar .avatarDefault, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar .avatarDefault {
+            width: 60px;
+            height: 60px;
+            max-width: 60px;
+            max-height: 60px;
+            min-width: 60px;
+            min-height: 60px; }
+          /* line 117, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions {
+            position: absolute;
+            top: 0;
+            left: 3.8em;
+            transform: scale(0);
+            transition: all 0.5s;
+            opacity: 0;
+            pointer-events: none; }
+          /* line 136, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover {
+            width: 6.25em; }
+            /* line 138, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions {
+              transform: scale(0.8);
+              opacity: 1;
+              pointer-events: auto; }
+        /* line 146, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview {
+          position: absolute;
+          left: 28px;
+          opacity: 0;
+          pointer-events: none; }
+          /* line 153, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview.is-visible {
+            opacity: 1;
+            left: 60px;
+            pointer-events: auto; }
+    /* line 163, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content #Logout {
+      margin-top: 10px; }
+    /* line 167, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content #Logout, #Account section #Profile div.content #buttonToggleChangePassword {
+      transform-origin: left top;
+      transform: scale(0.8); }
+    /* line 174, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile div.content #ChangePassword {
+      width: 100%; }
+      /* line 177, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #ChangePassword .roll {
+        height: auto;
+        overflow: hidden;
+        transition: all 0.5s ease;
+        max-height: 0; }
+        /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangePassword .roll.is-visible {
+          max-height: 400px; }
 
 /*# sourceMappingURL=Account.css.map */
