--- a/client/scss/account/Account.css
+++ b/client/scss/account/Account.css
@@ -1,7 +1,7 @@
 /*  Colors  */
 /* line 3, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
 #Account {
-  margin-top: 1em; }
+  margin-top: em; }
   /* line 5, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
   #Account section {
     display: flex;
@@ -37,97 +37,103 @@
       position: absolute;
       bottom: 0;
       right: 0; }
-    /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content div.flex p:firs-of-type {
-      margin-top: 10px; }
-    /* line 66, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content div.flex p#textUsername {
-      font-size: 22px;
-      color: #f26e63; }
-    /* line 70, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content div.flex p#textEmail {
-      font-size: 12px;
-      color: #b2b2b2; }
-    /* line 74, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content div.flex p#textEmailStatut {
-      font-size: 10px;
-      color: #466da0; }
-    /* line 81, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content #ChangeAvatar {
-      margin-right: 1em; }
-      /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section #Profile div.content #ChangeAvatar .currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview {
-        transition: all 0.5s;
-        display: inline-block; }
-        /* line 88, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #Profile div.content #ChangeAvatar .currentAvatar img, #Account section #Profile div.content #ChangeAvatar .avatarPreview img {
-          height: 60px;
-          width: 60px;
-          border-radius: 100%; }
-        /* line 94, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar {
-          position: relative;
-          left: 0;
-          opacity: 1;
-          width: 4.5em; }
-          /* line 102, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar.is-visible {
-            opacity: 0.3;
-            left: 0px; }
-          /* line 108, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar .avatarDefault, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar .avatarDefault {
-            width: 60px;
+    /* line 56, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #Profile {
+      padding: 1em; }
+      /* line 64, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content div.flex p:firs-of-type {
+        margin-top: 10px; }
+      /* line 67, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content div.flex p#textUsername {
+        font-size: 22px;
+        color: #f26e63; }
+      /* line 71, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content div.flex p#textEmail {
+        font-size: 12px;
+        color: #b2b2b2;
+        width: 10em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; }
+      /* line 79, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content div.flex p#textEmailStatut {
+        font-size: 10px;
+        color: #466da0; }
+      /* line 86, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #ChangeAvatar {
+        margin-right: 1em; }
+        /* line 89, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangeAvatar .currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview {
+          transition: all 0.5s;
+          display: inline-block; }
+          /* line 93, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar img, #Account section #Profile div.content #ChangeAvatar .avatarPreview img {
             height: 60px;
-            max-width: 60px;
-            max-height: 60px;
-            min-width: 60px;
-            min-height: 60px; }
-          /* line 117, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions {
+            width: 60px;
+            border-radius: 100%; }
+          /* line 99, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar {
+            position: relative;
+            left: 0;
+            opacity: 1;
+            width: 4.5em; }
+            /* line 107, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar.is-visible {
+              opacity: 0.3;
+              left: 0px; }
+            /* line 113, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar .avatarDefault, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar .avatarDefault {
+              width: 60px;
+              height: 60px;
+              max-width: 60px;
+              max-height: 60px;
+              min-width: 60px;
+              min-height: 60px; }
+            /* line 122, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions {
+              position: absolute;
+              top: 0;
+              left: 3.8em;
+              transform: scale(0);
+              transition: all 0.5s;
+              opacity: 0;
+              pointer-events: none; }
+            /* line 141, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover {
+              width: 6.25em; }
+              /* line 143, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+              #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions {
+                transform: scale(0.8);
+                opacity: 1;
+                pointer-events: auto; }
+          /* line 151, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview {
             position: absolute;
-            top: 0;
-            left: 3.8em;
-            transform: scale(0);
-            transition: all 0.5s;
+            left: 28px;
             opacity: 0;
             pointer-events: none; }
-          /* line 136, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover {
-            width: 6.25em; }
-            /* line 138, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-            #Account section #Profile div.content #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #Profile div.content #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions {
-              transform: scale(0.8);
+            /* line 158, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview.is-visible {
               opacity: 1;
+              left: 60px;
               pointer-events: auto; }
-        /* line 146, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview {
-          position: absolute;
-          left: 28px;
-          opacity: 0;
-          pointer-events: none; }
-          /* line 153, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #Profile div.content #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #Profile div.content #ChangeAvatar .avatarPreview.avatarPreview.is-visible {
-            opacity: 1;
-            left: 60px;
-            pointer-events: auto; }
-    /* line 163, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content #Logout {
-      margin-top: 10px; }
-    /* line 167, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content #Logout, #Account section #Profile div.content #buttonToggleChangePassword {
-      transform-origin: left top;
-      transform: scale(0.8); }
-    /* line 174, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Profile div.content #ChangePassword {
-      width: 100%; }
-      /* line 177, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section #Profile div.content #ChangePassword .roll {
-        height: auto;
-        overflow: hidden;
-        transition: all 0.5s ease;
-        max-height: 0; }
-        /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #Profile div.content #ChangePassword .roll.is-visible {
-          max-height: 400px; }
+      /* line 168, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #Logout {
+        margin-top: 10px; }
+      /* line 176, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #Logout *, #Account section #Profile div.content #buttonPasswordSubmit *, #Account section #Profile div.content .buttonPasswordCancel * {
+        font-size: 12px !important; }
+      /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #Profile div.content #ChangePassword {
+        width: 100%; }
+        /* line 185, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #Profile div.content #ChangePassword .roll {
+          height: auto;
+          overflow: hidden;
+          transition: all 0.5s ease;
+          max-height: 0; }
+          /* line 190, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #Profile div.content #ChangePassword .roll.is-visible {
+            max-height: 400px; }
 
 /*# sourceMappingURL=Account.css.map */
