--- a/client/scss/reset/reset.css
+++ b/client/scss/reset/reset.css
@@ -8,27 +8,28 @@
 /* line 11, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 a {
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent; }
 
-/* line 16, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 17, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 li {
   list-style-type: none; }
 
-/* line 20, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 21, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 button {
   border: none;
   outline: 0;
   background-color: inherit; }
 
-/* line 26, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 27, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 input {
   background: transparent;
   border: none; }
-  /* line 29, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+  /* line 30, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
   input:focus {
     outline: 0; }
 
-/* line 34, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 35, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 button, input[type="checkbox"] {
   cursor: pointer; }
 
