--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -90,9 +90,13 @@
             transition: all 0.5s;
             display: inline-block;
 
-            img{
-              height: 60px;
-              width:  60px;
+            img, .avatarDefault{
+              width:      60px;
+              height:     60px;
+              max-width:  60px;
+              max-height: 60px;
+              min-width:  60px;
+              min-height: 60px;
               border-radius: 100%;
             }
 
@@ -111,12 +115,6 @@
               
               // If user didn't set is own avatar
               .avatarDefault{
-                width: 60px;
-                height: 60px;
-                max-width: 60px;
-                max-height: 60px;
-                min-width: 60px;
-                min-height: 60px;
               }
               
               #avatarOptions{
@@ -126,7 +124,7 @@
                 transform: scale(0);
                 
                 transition: all 0.5s;
-                opacity: 0;
+                opacity:    0;
                 pointer-events: none;
                 
 
@@ -151,16 +149,26 @@
             &.avatarPreview{
               position: absolute;
               //left:     28px;
-              left:     28px;
+              left:44px;
+              transform: scale(0) translate3d(0, 0, 0);
+              transform: scale(1);
               opacity:  0;
               pointer-events: none;
 
               &.is-visible{
                 opacity:  1;
-                left:     60px;
+                transform: scale(1.2) translate3d(-15px, -10px, 0);
                 pointer-events: auto;
               }
 
+            }
+            
+          }
+          #buttonUploadAvatar{
+            width: 0em;
+            animation: extend 0.3s ease;
+            *{
+              font-size: 10px !important;
             }
           }
         }
