--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -109,7 +109,7 @@
               width:4.5em;
               
               &.is-visible{
-                opacity:  0.3;
+                opacity:  0.7;
                 left:     0px;
               }
               
@@ -150,14 +150,13 @@
               position: absolute;
               //left:     28px;
               left:44px;
-              transform: scale(0) translate3d(0, 0, 0);
-              transform: scale(1);
-              opacity:  0;
+              transform:  scale(1) translate3d(0, 0, 0);
+              opacity:    0;
               pointer-events: none;
 
               &.is-visible{
-                opacity:  1;
-                transform: scale(1.2) translate3d(-15px, -10px, 0);
+                transform:  scale(1.2) translate3d(-20px, 15px, 0);
+                opacity:    1;
                 pointer-events: auto;
               }
 
@@ -165,11 +164,18 @@
             
           }
           #buttonUploadAvatar{
-            width: 0em;
-            animation: extend 0.3s ease;
-            *{
-              font-size: 10px !important;
+            width: 0em; // trick
+            height: 0em;
+            transition: all 0.4s;
+            transform-origin: top;
+            transform:  scale(0);
+            opacity:    0;
+            &.is-visible{
+              transform:  scale(1);
+              opacity:    1;
+              height:     4em;
             }
+            *{ font-size: 10px !important; }
           }
         }
         
@@ -193,7 +199,7 @@
           .roll{
             height:     auto;
             overflow:   hidden;
-            transition: all 0.5s ease;
+            transition: all 0.6s ease;
             max-height: 0;
             &.is-visible{
               max-height: 400px;
